--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 body {
 	margin: 0;
+	overflow-y: hidden;
+	overflow-x: hidden;
 }
 
 #container {
@@ -15,6 +17,29 @@ body {
 	background-color: #fff;
 }
 
+#canvas-move {
+	width: 100%;
+	height: 100%;
+	background:
+    	linear-gradient(-90deg, rgba(0, 0, 0, .03) 1px, transparent 1px),
+    	linear-gradient(rgba(0, 0, 0, .03) 1px, transparent 1px),
+    	linear-gradient(-90deg, rgba(0, 0, 0, .03) 1px, transparent 1px),
+    	linear-gradient(rgba(0, 0, 0, .03) 1px, transparent 1px),
+    	linear-gradient(transparent 3px, transparent 3px, transparent 78px, transparent 78px),
+    	linear-gradient(-90deg, transparent 1px, transparent 1px),
+    	linear-gradient(-90deg, transparent 3px, transparent 3px, transparent 78px, transparent 78px),
+    	linear-gradient(transparent 1px, transparent 1px), transparent;
+    background-size:
+    	10px 10px,
+    	10px 10px,
+    	10px 10px,
+    	10px 10px,
+    	10px 10px,
+    	10px 10px,
+    	10px 10px,
+    	10px 10px;
+}
+
 #canvas-container {
 	width: 100%;
 }
@@ -23,4 +48,11 @@ body {
 	width: 100%;
 	height: 100px;
 	background-color: green;
+}
+
+#selected-area {
+	position: absolute;
+	cursor: move;
+	background-color: black;
+	opacity: 50%;
 }
