--- a/style.css
+++ b/style.css
@@ -9,12 +9,14 @@ body {
 	height: 100%;
 	display: flex;
 	flex-wrap: wrap;
+	flex-direction: row;
 }
 
 #canvas {
 	width: 100%;
 	height: 100%;
 	background-color: #fff;
+	
 }
 
 #canvas-move {
@@ -46,8 +48,13 @@ body {
 
 #canvas-options {
 	width: 100%;
-	height: 100px;
-	background-color: green;
+	height: 70px;
+	background: linear-gradient(to bottom, #D5DEE7 0%, #E8EBF2 50%, #E2E7ED 100%), linear-gradient(to bottom, rgba(0,0,0,0.02) 50%, rgba(255,255,255,0.02) 61%, rgba(0,0,0,0.02) 73%), linear-gradient(33deg, rgba(255,255,255,0.20) 0%, rgba(0,0,0,0.20) 100%);
+	background-blend-mode: normal,color-burn;
+	border-bottom-left-radius: 2px;
+	border-bottom-right-radius: 2px;
+	border-bottom: 0.6px solid #838383;
+	padding-top: 0.7%;
 }
 
 #selected-area {
@@ -55,4 +62,107 @@ body {
 	cursor: move;
 	background-color: black;
 	opacity: 50%;
+}
+
+
+/* BUTTON STYLES */
+.undo {
+	box-shadow:inset 0px 1px 0px 0px #ffffff;
+	background:linear-gradient(to bottom, #f9f9f9 5%, #e9e9e9 100%);
+	background-color:#f9f9f9;
+	border-radius:6px;
+	border:1px solid #dcdcdc;
+	display:inline-block;
+	cursor:pointer;
+	color:#666666;
+	font-family:Arial;
+	font-size:10px;
+	font-weight:bold;
+	padding:6px 15px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #ffffff;
+}
+.undo:hover {
+	background:linear-gradient(to bottom, #e9e9e9 5%, #f9f9f9 100%);
+	background-color:#e9e9e9;
+}
+.undo:active {
+	position:relative;
+	top:1px;
+}
+
+.undo:first-child {
+	margin-left: 1%;
+}
+
+
+.select-css {
+    font-size: 10px;
+	font-family:Arial;
+	font-weight:bold;
+	color:#666666;
+	cursor:pointer;
+    line-height: 1.5;
+    padding: .6em 1.4em .5em .8em;
+    width: 6rem;
+    box-sizing: border-box;
+    margin: 0;
+	border:1px solid #dcdcdc;
+	box-shadow:inset 0px 1px 0px 0px #ffffff;
+    border-radius: .5em;
+    -moz-appearance: none;
+    -webkit-appearance: none;
+    appearance: none;
+    background-color: #fff;
+    background-image: url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22%23007CB2%22%20d%3D%22M287%2069.4a17.6%2017.6%200%200%200-13-5.4H18.4c-5%200-9.3%201.8-12.9%205.4A17.6%2017.6%200%200%200%200%2082.2c0%205%201.8%209.3%205.4%2012.9l128%20127.9c3.6%203.6%207.8%205.4%2012.8%205.4s9.2-1.8%2012.8-5.4L287%2095c3.5-3.5%205.4-7.8%205.4-12.8%200-5-1.9-9.2-5.5-12.8z%22%2F%3E%3C%2Fsvg%3E'),
+      linear-gradient(to bottom, #ffffff 0%,#e5e5e5 100%);
+    background-repeat: no-repeat, repeat;
+    background-position: right .7em top 50%, 0 0;
+    background-size: .65em auto, 100%;
+}
+.select-css::-ms-expand {
+    display: none;
+}
+.select-css:hover {
+	background:linear-gradient(to bottom, #e9e9e9 5%, #f9f9f9 100%);
+	background-color:#e9e9e9;
+}
+.select-css:focus {
+    border-color: #aaa;
+    box-shadow: 0 0 1px 3px rgba(59, 153, 252, .7);
+    box-shadow: 0 0 0 3px -moz-mac-focusring;
+    color: #222; 
+    outline: none;
+}
+.select-css option {
+    font-weight:normal;
+}
+
+/* Load and save painting */
+.save-painting, .load-painting {
+	float: right;
+}
+.save-painting {
+	margin: 0 1% 0 1%;
+}
+
+/* Drop down colors */
+.ColorBlack {
+	background: black;
+	color: white;
+}
+
+.ColorBlue {
+	background: #0004EF;
+	color: white;
+}
+
+.ColorRed {
+	background: #F6F622;
+	color: white;
+}
+
+.ColorYellow {
+	background: #CD0F0F;
+	color: white;
 }
